# webmencoder

./: .gitignore  .releaserc  .terraform.lock.hcl  CHANGELOG.md  Cargo.toml  LICENSE-MIT  LICENSE.spdx  README.md  github.tf
.github/workflows/: .releaserc  audit.yaml  clippy.yaml  linter.yml  release.yml
src/: main.rs
