# SPDX-License-Identifier: (MIT OR Apache-2.0)
[package]
name = "webmencoder"
version = "0.0.2"
rust-version = "1.59"
authors = ["Matt Burgess <549318+mattburgess@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"

[profile.release]
strip = true
